RESOLVED FIXED215730
[WPE][Qt] Fix qt-wpe-minibrowser on Debian10
https://bugs.webkit.org/show_bug.cgi?id=215730
Summary [WPE][Qt] Fix qt-wpe-minibrowser on Debian10
Carlos Alberto Lopez Perez
Reported 2020-08-21 04:45:31 PDT
I was trying the qt-wpe-minibrowser on Debian-10 (without flatpak) and there are a few small issues that need to be addressed to make it work
Attachments
Patch (3.83 KB, patch)
2020-08-21 04:53 PDT, Carlos Alberto Lopez Perez
no flags
Carlos Alberto Lopez Perez
Comment 1 2020-08-21 04:53:46 PDT
EWS
Comment 2 2020-08-25 13:21:04 PDT
Committed r266141: <https://trac.webkit.org/changeset/266141> All reviewed patches have been landed. Closing bug and clearing flags on attachment 407010 [details].
Note You need to log in before you can comment on or make changes to this bug.