[WPE][Qt] Fix qt-wpe-minibrowser on Debian10 https://bugs.webkit.org/show_bug.cgi?id=215730

Reviewed by Philippe Normand.

Source/WebKit:

QWheelEvent position is not available on Qt < 5.14. Use posF instead in that case.
Tested with Qt 5.11

No new tests, is a build fix.

* UIProcess/API/wpe/qt/WPEQtViewBackend.cpp:
(WPEQtViewBackend::dispatchWheelEvent):

Tools:

When not running in flatpak the path to the qml directory is different.

* Scripts/run-qt-wpe-minibrowser:


Canonical link: https://commits.webkit.org/228613@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@266141 268f45cc-cd09-0410-ab3c-d52691b4dbfc